# CPS

./: .gitignore  README.md
interpreter-pattern-example/: CMakeLists.txt  Expression.cpp  Expression.hpp  catch.hpp  catchMain.cpp  tests.cpp
scratch/: BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  Point.hpp  Shape.cpp  Shape.hpp  main.cpp
source/: CMakeLists.txt  CPS.cpp  CPS.hpp  CompoundShape.cpp  CompoundShape.hpp  Shape.cpp  Shape.hpp  main.cpp
source/visuals/: basic.ps  calc.ps  hex.ps
tests/: CMakeLists.txt  README.md  Shape.cpp  Shape.hpp  catch.hpp  postscript_output.cpp  shape_construction.cpp  unit_tests_ctors.cpp  unit_tests_output.cpp  visual_output_conversion.txt  visual_output_main.cpp
visual_test_output/: circ.ps  horiz.ps  layer.ps  poly.ps  rect.ps  scale.ps  sqr.ps  tri.ps  vert.ps
